# py-utils

./: .gitignore  README.md  example_usage.py  pyproject.toml
docs/: index.md  log.md
src/py_utils/: __init__.py  currency.py  format.py  log.py  xdg.py
